[gd_scene load_steps=3 format=2]

[ext_resource path="res://Elements/Buttons/LevelButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game&UI/Level_selection.gd" type="Script" id=2]

[node name="Level_selection" type="Node2D"]
script = ExtResource( 2 )

[node name="Level1Button" parent="." instance=ExtResource( 1 )]

[node name="Level2Button" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_Level2Button_pressed"]
